--- a/ExpenseManager.Web/App/randomness/randomness.html
+++ b/ExpenseManager.Web/App/randomness/randomness.html
@@ -22,12 +22,12 @@
                 <h1>{{expression.view}}</h1>
             </div>
         </td>
-        <td>
+        <td ng-show="true">
             <div class="blackbox">
                 <h1>{{expression.isValid}}</h1>
             </div>
         </td>
-        <td>
+        <td ng-show="true">
             <div class="blackbox">
                 <h1>{{expression.value}}</h1>
             </div>
