--- a/ExpenseManager.Web/App/expenseSummary/expenseSummary.html
+++ b/ExpenseManager.Web/App/expenseSummary/expenseSummary.html
@@ -5,15 +5,22 @@
 	<meta charset="utf-8" />
 </head>
 <body>
-<h1>{{vm.title}}</h1>
-<table class="table">
-    <tbody>
-    <tr ng-repeat="item in vm.items">
-        <td><div class="redbox">{{vm.title}}</div></td>
-        <td><div class="bluebox">{{vm.title}}</div></td>
-        <td><div class="greenbox">{{vm.title}}</div></td>
-    </tr>
-    </tbody>
-</table>
+    <h1>{{vm.title}}</h1>
+    <table class="table" ng-show="false">
+        <tbody>
+            <tr ng-repeat="item in vm.items|oddFilter">
+                <td><div class="{{vm.class}}">{{item}}</div></td>
+                <td><div class="bluebox">{{item}}</div></td>
+                <td><div class="greenbox">{{item}}</div></td>
+            </tr>
+        </tbody>
+    </table>
+    <table class="table">
+        <tbody>
+            <tr ng-repeat="row in vm.matrix">
+                <td ng-repeat="item in row"><div class="{{vm.class}}">{{item}}</div></td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
