--- a/ExpenseManager.Web/app/expenseSummary/expenseSummary.html
+++ b/ExpenseManager.Web/app/expenseSummary/expenseSummary.html
@@ -1,4 +1,4 @@
-﻿<!--<div class="wrapper">
+﻿<div class="wrapper">
     <h1>{{vm.title}}</h1>
     <div class="row">
         <div class="col-md-6">
@@ -14,23 +14,31 @@
         <thead>
         <tr>
             <th>Date</th>
-            <th>Name</th>
+            <th>Category Name</th>
             <th>Description</th>
             <th>Value</th>
         </tr>
         </thead>
         <tbody>
+        <tr>
+            <td><input class="form-control" ng-model="vm.expenseToEdit.date" /></td>
+            <td><select class="form-control" ng-model="vm.expenseToEdit.categoryName" ng-options="category as category for category in vm.categories" ></select></td>
+            <td><input class="form-control" ng-model="vm.expenseToEdit.description" /></td>
+            <td><input class="form-control" ng-model="vm.expenseToEdit.value"/></td>
+            <td><div class="btn-default" ng-click="vm.updateExpense(vm.expenseToEdit)">Update</div></td>            
+        </tr>
         <tr ng-repeat="expense in vm.expenses">
             <td>{{expense.date|date:'MMM-dd-yyyy'}}</td>
-            <td>{{expense.name}}</td>
+            <td>{{expense.categoryName}}</td>
             <td>{{expense.description}}</td>
             <td>{{expense.value|currency}}</td>
+            <td><div class="btn-default" ng-click="vm.editExpense(expense)">Edit</div></td>
         </tr>
         </tbody>
     </table>
-</div>-->
-
-<!DOCTYPE html>
+</div>
+<!---------------------------------------------------------------------------->
+<!--<!DOCTYPE html>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <style>
@@ -57,7 +65,7 @@
     <label><input type="radio" name="mode" value="size"> Size</label>
     <label><input type="radio" name="mode" value="count" checked> Count</label>
 </form>
-<!--<script src="//d3js.org/d3.v3.min.js"></script>-->
+<script src="//d3js.org/d3.v3.min.js"></script>
     <script>
 
 var width = 960,
@@ -164,4 +172,4 @@ function arcTweenZoom(d) {
 }
 
     </script>
-</body>
+</body>-->
