Adding dropdown selection for updating Categories

--- a/ExpenseManager.Web/app/expenseSummary/expenseSummary.html
+++ b/ExpenseManager.Web/app/expenseSummary/expenseSummary.html
@@ -22,7 +22,7 @@
         <tbody>
         <tr>
             <td><input class="form-control" ng-model="vm.expenseToEdit.date" /></td>
-            <td><select class="form-control" ng-model="vm.expenseToEdit.categoryName" ng-options="category as category for category in vm.categories" ></select></td>
+            <td><select class="form-control" ng-model="vm.expenseToEdit.categoryId" ng-options="category.id as category.name for category in vm.categories track by category.id" ></select></td>
             <td><input class="form-control" ng-model="vm.expenseToEdit.description" /></td>
             <td><input class="form-control" ng-model="vm.expenseToEdit.value"/></td>
             <td><div class="btn-default" ng-click="vm.updateExpense(vm.expenseToEdit)">Update</div></td>            
